@@ -649,6 +649,7 @@ class Base(mpdclient3.mpd_connection):
         mainvbox = gtk.VBox()
         tophbox = gtk.HBox()
         self.imageeventbox = gtk.EventBox()
+        self.imageeventbox.set_visible_window(False)
         self.imageeventbox.drag_dest_set(gtk.DEST_DEFAULT_HIGHLIGHT | gtk.DEST_DEFAULT_DROP, [("text/uri-list", 0, 80)], gtk.gdk.ACTION_DEFAULT)
         self.albumimage = gtk.Image()
         self.imageeventbox.add(self.albumimage)
@@ -675,6 +676,7 @@ class Base(mpdclient3.mpd_connection):
         self.progresslabel.set_size_request(-1, 6)
         self.progressbox.pack_start(self.progresslabel)
         self.progresseventbox = gtk.EventBox()
+        self.progresseventbox.set_visible_window(False)
         self.progressbar = gtk.ProgressBar()
         self.progressbar.set_orientation(gtk.PROGRESS_LEFT_TO_RIGHT)
         self.progressbar.set_fraction(0)
@@ -739,12 +741,12 @@ class Base(mpdclient3.mpd_connection):
         vbox_current.pack_start(self.expanderwindow, True, True)
         vbox_current.pack_start(self.filterbox, False, False, 5)
         playlistevbox = gtk.EventBox()
+        playlistevbox.set_visible_window(False)
         playlisthbox = gtk.HBox()
         playlisthbox.pack_start(gtk.image_new_from_stock(gtk.STOCK_CDROM, gtk.ICON_SIZE_MENU), False, False, 2)
         playlisthbox.pack_start(gtk.Label(str=self.TAB_CURRENT), False, False, 2)
         playlistevbox.add(playlisthbox)
         playlistevbox.show_all()
-        playlistevbox.set_property("visible-window", False)
         playlistevbox.connect("button_press_event", self.on_tab_click)
         self.notebook.append_page(vbox_current, playlistevbox)
         current_tab = self.notebook.get_children()[0]
@@ -786,12 +788,12 @@ class Base(mpdclient3.mpd_connection):
         browservbox.pack_start(expanderwindow2, True, True, 2)
         browservbox.pack_start(self.searchbox, False, False, 2)
         libraryevbox = gtk.EventBox()
+        libraryevbox.set_visible_window(False)
         libraryhbox = gtk.HBox()
         libraryhbox.pack_start(gtk.image_new_from_stock(gtk.STOCK_HARDDISK, gtk.ICON_SIZE_MENU), False, False, 2)
         libraryhbox.pack_start(gtk.Label(str=self.TAB_LIBRARY), False, False, 2)
         libraryevbox.add(libraryhbox)
         libraryevbox.show_all()
-        libraryevbox.set_property("visible-window", False)
         libraryevbox.connect("button_press_event", self.on_tab_click)
         self.notebook.append_page(browservbox, libraryevbox)
         library_tab = self.notebook.get_children()[1]
@@ -810,12 +812,12 @@ class Base(mpdclient3.mpd_connection):
         self.playlists_selection = self.playlists.get_selection()
         expanderwindow3.add(self.playlists)
         playlistsevbox = gtk.EventBox()
+        playlistsevbox.set_visible_window(False)
         playlistshbox = gtk.HBox()
         playlistshbox.pack_start(gtk.image_new_from_stock(gtk.STOCK_JUSTIFY_CENTER, gtk.ICON_SIZE_MENU), False, False, 2)
         playlistshbox.pack_start(gtk.Label(str=self.TAB_PLAYLISTS), False, False, 2)
         playlistsevbox.add(playlistshbox)
         playlistsevbox.show_all()
-        playlistsevbox.set_property("visible-window", False)
         playlistsevbox.connect("button_press_event", self.on_tab_click)
         self.notebook.append_page(expanderwindow3, playlistsevbox)
         playlists_tab = self.notebook.get_children()[2]
@@ -834,12 +836,12 @@ class Base(mpdclient3.mpd_connection):
         self.streams_selection = self.streams.get_selection()
         expanderwindow4.add(self.streams)
         streamsevbox = gtk.EventBox()
+        streamsevbox.set_visible_window(False)
         streamshbox = gtk.HBox()
         streamshbox.pack_start(gtk.image_new_from_stock(gtk.STOCK_NETWORK, gtk.ICON_SIZE_MENU), False, False, 2)
         streamshbox.pack_start(gtk.Label(str=self.TAB_STREAMS), False, False, 2)
         streamsevbox.add(streamshbox)
         streamsevbox.show_all()
-        streamsevbox.set_property("visible-window", False)
         streamsevbox.connect("button_press_event", self.on_tab_click)
         self.notebook.append_page(expanderwindow4, streamsevbox)
         streams_tab = self.notebook.get_children()[3]
@@ -851,12 +853,12 @@ class Base(mpdclient3.mpd_connection):
         info.set_policy(gtk.POLICY_AUTOMATIC, gtk.POLICY_AUTOMATIC)
         info.set_shadow_type(gtk.SHADOW_IN)
         infoevbox = gtk.EventBox()
+        infoevbox.set_visible_window(False)
         infohbox = gtk.HBox()
         infohbox.pack_start(gtk.image_new_from_stock(gtk.STOCK_JUSTIFY_FILL, gtk.ICON_SIZE_MENU), False, False, 2)
         infohbox.pack_start(gtk.Label(str=self.TAB_INFO), False, False, 2)
         infoevbox.add(infohbox)
         infoevbox.show_all()
-        infoevbox.set_property("visible-window", False)
         infoevbox.connect("button_press_event", self.on_tab_click)
         self.info_widgets_initialize(info)
         self.notebook.append_page(info, infoevbox)
@@ -908,6 +910,7 @@ class Base(mpdclient3.mpd_connection):
         outtertipbox = gtk.VBox()
         tipbox = gtk.HBox()
         self.trayalbumeventbox = gtk.EventBox()
+        self.trayalbumeventbox.set_visible_window(False)
         self.trayalbumeventbox.set_size_request(59, 90)
         self.trayalbumimage1 = gtk.Image()
         self.trayalbumimage1.set_size_request(51, 77)
@@ -1227,6 +1230,7 @@ class Base(mpdclient3.mpd_connection):
         info_song.set_label_widget(songinfolabel)
         inner_hbox = gtk.HBox()
         self.info_imagebox = gtk.EventBox()
+        self.info_imagebox.set_visible_window(False)
         self.info_imagebox.drag_dest_set(gtk.DEST_DEFAULT_HIGHLIGHT | gtk.DEST_DEFAULT_DROP, [("text/uri-list", 0, 80)], gtk.gdk.ACTION_DEFAULT)
         self.info_image = gtk.Image()
         self.info_image.set_alignment(0.5, 0)
@@ -1263,6 +1267,7 @@ class Base(mpdclient3.mpd_connection):
             tmplabel2 = gtk.Label("")
             if labels_link[i]:
                 tmpevbox = gtk.EventBox()
+                tmpevbox.set_visible_window(False)
                 self.info_apply_link_signals(tmpevbox, labels_type[i], labels_tooltip[i])
                 tmpevbox.add(tmplabel2)
             tmplabel.set_markup("<b>" + labels_text[i] + ":</b>")
@@ -1293,11 +1298,13 @@ class Base(mpdclient3.mpd_connection):
 
         mischbox = gtk.HBox()
         moreevbox = gtk.EventBox()
+        moreevbox.set_visible_window(False)
         self.info_morelabel = gtk.Label()
         self.info_morelabel.set_alignment(0, 0)
         self.info_apply_link_signals(moreevbox, 'more', _("Toggle extra tags"))
         moreevbox.add(self.info_morelabel)
         editevbox = gtk.EventBox()
+        editevbox.set_visible_window(False)
         self.info_editlabel = gtk.Label()
         self.info_editlabel.set_alignment(0, 0)
         self.info_apply_link_signals(editevbox, 'edit', _("Edit song tags"))
@@ -1333,6 +1340,7 @@ class Base(mpdclient3.mpd_connection):
         lyricsbox.pack_start(lyricsbox_top, True, True, vert_spacing)
         lyricsbox_bottom = gtk.HBox()
         searchevbox = gtk.EventBox()
+        searchevbox.set_visible_window(False)
         self.info_searchlabel = gtk.Label()
         self.info_searchlabel.set_alignment(0, 0)
         self.info_apply_link_signals(searchevbox, 'search', _("Search Lyricwiki.org for lyrics"))
@@ -7164,6 +7172,7 @@ class Base(mpdclient3.mpd_connection):
             self.statusicon.connect('activate', self.trayaction_activate)
         elif HAVE_EGG:
             self.trayeventbox = gtk.EventBox()
+            self.trayeventbox.set_visible_window(False)
             self.trayeventbox.connect('button_press_event', self.trayaction)
             self.trayeventbox.connect('scroll-event', self.trayaction_scroll)
             self.trayeventbox.connect('size-allocate', self.trayaction_size)
